tests/dataset/tpc-ds/compiler/c/q87.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *cust;
  double price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *cust;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double test_TPCDS_Q87_sample_result;
static void test_TPCDS_Q87_sample() {
  if (!(test_TPCDS_Q87_sample_result == 87.0)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.cust = "A", .price = 5.0},
                                (store_sale_t){.cust = "B", .price = 30.0},
                                (store_sale_t){.cust = "C", .price = 57.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cust = "A"}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  list_int web_sales = list_int_create(0);
  int tmp1 = int_create(store_sales_len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < store_sales_len; tmp3++) {
    store_sale_t s = store_sales[tmp3];
    tmp1.data[tmp2] = s.cust;
    tmp2++;
  }
  tmp1.len = tmp2;
  int store_customers = tmp1;
  int tmp4 = int_create(catalog_sales_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < catalog_sales_len; tmp6++) {
    catalog_sale_t s = catalog_sales[tmp6];
    tmp4.data[tmp5] = s.cust;
    tmp5++;
  }
  tmp4.len = tmp5;
  int catalog_customers = tmp4;
  list_int tmp7 = list_int_create(0);
  list_int tmp8 = list_int_create(0);
  int tmp9 = 0;
  for (int tmp10 = 0; tmp10 < 0; tmp10++) {
    int s = tmp7.data[tmp10];
    tmp8.data[tmp9] = s.cust;
    tmp9++;
  }
  tmp8.len = tmp9;
  int web_customers = tmp8;
  int tmp11 = int_create(catalog_customers.len);
  int tmp12 = 0;
  for (int tmp13 = 0; tmp13 < catalog_customers.len; tmp13++) {
    const char *x = catalog_customers.data[tmp13];
    if (!((strcmp(x, c) == 0))) {
      continue;
    }
    tmp11.data[tmp12] = x;
    tmp12++;
  }
  tmp11.len = tmp12;
  int tmp14 = int_create(store_customers.len);
  int tmp15 = 0;
  for (int tmp16 = 0; tmp16 < store_customers.len; tmp16++) {
    const char *c = store_customers.data[tmp16];
    if (!(tmp11.len == 0 && 0.len == 0)) {
      continue;
    }
    tmp14.data[tmp15] = c;
    tmp15++;
  }
  tmp14.len = tmp15;
  int store_only = tmp14;
  list_float tmp17 = list_float_create(store_sales_len);
  int tmp18 = 0;
  for (int tmp19 = 0; tmp19 < store_sales_len; tmp19++) {
    store_sale_t s = store_sales[tmp19];
    if (!(0.len > 0)) {
      continue;
    }
    tmp17.data[tmp18] = s.price;
    tmp18++;
  }
  tmp17.len = tmp18;
  double result = _sum_float(tmp17);
  _json_float(result);
  test_TPCDS_Q87_sample_result = result;
  test_TPCDS_Q87_sample();
  free(store_customers.data);
  free(catalog_customers.data);
  free(web_customers.data);
  free(tmp11.data);
  free(store_only.data);
  free(tmp17.data);
  return 0;
}
